legacy/rust/crates/hwp-core/tests/snapshots/snapshot_tests__table_bug_page_0007.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: page_html
---
<!DOCTYPE html>
<html><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><head><title>연구회 유형 및 지원 예산</title><meta http-equiv="content-type" content="text/html; charset=utf-8"><link rel="stylesheet" type="text/css" href="table-bug_style.css"></head><body><div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:20mm;top:25mm;"><div class="hcI"><div class="hls ps7" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:170.00mm;"><span class="hrt cs74">[붙임 5]</span></div><div class="hls ps31" style="line-height:7.06mm;white-space:nowrap;left:0.00mm;top:7.41mm;height:7.06mm;width:170.00mm;"><span class="hrt cs76">SW전문가 멘토 지원서</span></div><div class="hls ps20" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:15.70mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps24" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:24.16mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps36" style="line-height:85.81mm;white-space:nowrap;left:0.00mm;top:28.93mm;height:85.81mm;width:170.00mm;"><div class="htb" style="left:0.49mm;width:166.44mm;top:0.49mm;height:85.81mm;display:inline-block;position:relative;vertical-align:middle;"><svg class="hs" viewBox="-2.5 -2.5 171.44 90.81" style="left:-2.5mm;top:-2.5mm;width:171.44mm;height:90.81mm;"><defs></defs><path d="M0,0 L0,84.82" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M16.26,0 L16.26,84.82" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M23.91,12.94 L23.91,55.72" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M34.9,55.72 L34.9,84.82" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M37.25,12.94 L37.25,34.02" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M45.54,0 L45.54,12.94" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M51.52,55.72 L51.52,84.82" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M84.81,12.94 L84.81,34.02" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M108.85,12.94 L108.85,34.02" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M165.45,12.94 L165.45,84.82" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M-0.2,0 L45.74,0" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M-0.2,12.94 L165.65,12.94" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M23.85,23.48 L165.51,23.48" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M16.2,34.02 L165.51,34.02" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M16.2,55.72 L165.51,55.72" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M34.84,70.58 L165.51,70.58" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.2,84.82 L165.65,84.82" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path></svg><div class="hce" style="left:0mm;top:0mm;width:16.26mm;height:12.94mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:1.5mm;"><div class="hls ps24" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.88mm;width:15.27mm;"><span class="hrt cs79">접수</span></div><div class="hls ps24" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:5.05mm;height:3.88mm;width:15.27mm;"><span class="hrt cs79">번호</span></div></div></div></div><div class="hce" style="left:16.26mm;top:0mm;width:29.28mm;height:12.94mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:4.2mm;"><div class="hls ps23" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:28.29mm;"><span class="hrt cs73">&nbsp;2026-</span></div></div></div></div><div class="hce" style="left:45.54mm;top:0mm;width:119.92mm;height:12.94mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:4.2mm;"><div class="hls ps36" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:118.93mm;"></div></div></div></div><div class="hce" style="left:0mm;top:12.94mm;width:16.26mm;height:71.88mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:18.35mm;"><div class="hls ps24" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.88mm;width:15.27mm;"><span class="hrt cs79">신</span></div><div class="hls ps24" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:4.87mm;height:3.53mm;width:15.27mm;"></div><div class="hls ps24" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:9.92mm;height:3.53mm;width:15.27mm;"></div><div class="hls ps24" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:15.16mm;height:3.88mm;width:15.27mm;"><span class="hrt cs79">청</span></div><div class="hls ps24" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:20.03mm;height:3.53mm;width:15.27mm;"></div><div class="hls ps24" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:25.08mm;height:3.53mm;width:15.27mm;"></div><div class="hls ps24" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:30.31mm;height:3.88mm;width:15.27mm;"><span class="hrt cs79">자</span></div></div></div></div><div class="hce" style="left:16.26mm;top:12.94mm;width:7.66mm;height:21.08mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:5.58mm;"><div class="hls ps24" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.88mm;width:6.66mm;"><span class="hrt cs79">성&nbsp;</span></div><div class="hls ps24" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:5.05mm;height:3.88mm;width:6.66mm;"><span class="hrt cs79">명</span></div></div></div></div><div class="hce" style="left:23.91mm;top:12.94mm;width:13.33mm;height:10.54mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:2.83mm;"><div class="hls ps20" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.88mm;width:12.33mm;"><span class="hrt cs79">한 글</span></div></div></div></div><div class="hce" style="left:37.25mm;top:12.94mm;width:47.57mm;height:10.54mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:2.83mm;"><div class="hls ps20" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:46.58mm;"></div></div></div></div><div class="hce" style="left:84.81mm;top:12.94mm;width:24.04mm;height:10.54mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:2.83mm;"><div class="hls ps24" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.88mm;width:23.04mm;"><span class="hrt cs79">성 &nbsp;&nbsp;&nbsp;&nbsp;별</span></div></div></div></div><div class="hce" style="left:108.85mm;top:12.94mm;width:56.6mm;height:10.54mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:2.83mm;"><div class="hls ps24" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.88mm;width:55.61mm;"><span class="hrt cs79">남 &nbsp;&nbsp;, &nbsp;&nbsp;여</span></div></div></div></div><div class="hce" style="left:23.91mm;top:23.48mm;width:13.33mm;height:10.54mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:2.83mm;"><div class="hls ps20" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.88mm;width:12.33mm;"><span class="hrt cs79">한 자</span></div></div></div></div><div class="hce" style="left:37.25mm;top:23.48mm;width:47.57mm;height:10.54mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:2.83mm;"><div class="hls ps20" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:46.58mm;"></div></div></div></div><div class="hce" style="left:84.81mm;top:23.48mm;width:24.04mm;height:10.54mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:2.83mm;"><div class="hls ps24" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.88mm;width:23.04mm;"><span class="hrt cs79">생년월일</span></div></div></div></div><div class="hce" style="left:108.85mm;top:23.48mm;width:56.6mm;height:10.54mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.01mm;"><div class="hls ps24" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:55.61mm;"></div></div></div></div><div class="hce" style="left:16.26mm;top:34.02mm;width:7.66mm;height:21.7mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:2.2mm;"><div class="hls ps20" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.88mm;width:6.66mm;"><span class="hrt cs79">현</span></div><div class="hls ps20" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:6.21mm;height:3.88mm;width:6.66mm;"><span class="hrt cs79">주&nbsp;</span></div><div class="hls ps20" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:12.42mm;height:3.88mm;width:6.66mm;"><span class="hrt cs79">소</span></div></div></div></div><div class="hce" style="left:23.91mm;top:34.02mm;width:141.54mm;height:21.7mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:1.64mm;"><div class="hls ps37" style="line-height:4.59mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.59mm;width:140.55mm;"><span class="hrt cs75">&nbsp;□□□□□</span></div><div class="hls ps7" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:7.16mm;height:3.53mm;width:140.55mm;"></div><div class="hls ps7" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:13.55mm;height:3.88mm;width:140.55mm;"><span class="hrt cs79">&nbsp;연락처 : &nbsp;(집) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(핸드폰)</span></div></div></div></div><div class="hce" style="left:16.26mm;top:55.72mm;width:18.64mm;height:29.1mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:9.58mm;"><div class="hls ps24" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.88mm;width:17.65mm;"><span class="hrt cs79">최종</span></div><div class="hls ps24" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:5.05mm;height:3.88mm;width:17.65mm;"><span class="hrt cs79">학력</span></div></div></div></div><div class="hce" style="left:34.9mm;top:55.72mm;width:16.63mm;height:14.85mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:4.99mm;"><div class="hls ps22" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.88mm;width:15.64mm;"><span class="hrt cs79">출신학교 &nbsp;</span></div></div></div></div><div class="hce" style="left:51.52mm;top:55.72mm;width:113.93mm;height:14.85mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:4.99mm;"><div class="hls ps7" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:112.93mm;"></div></div></div></div><div class="hce" style="left:34.9mm;top:70.58mm;width:16.63mm;height:14.25mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:4.68mm;"><div class="hls ps22" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.88mm;width:15.64mm;"><span class="hrt cs79">졸업년도</span></div></div></div></div><div class="hce" style="left:51.52mm;top:70.58mm;width:113.93mm;height:14.25mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:4.68mm;"><div class="hls ps7" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:112.93mm;"></div></div></div></div></div></div><div class="hls ps24" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:114.56mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps7" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:119.79mm;height:3.88mm;width:170.00mm;"><span class="hrt cs79">&nbsp;&nbsp;본인은</span><span class="hrt cs80">&nbsp;멘토링 운영 결격사유(성격, 인성, 전과기록, 업무능력, 병력 등)가 발생할 시에 해임&nbsp;</span></div><div class="hls ps7" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:126.00mm;height:3.88mm;width:170.00mm;"><span class="hrt cs80">조치하여도 이의가 없으며 2026학년도 SW전문가 멘토링에 소정의 서류를 갖추어 지원합니다.</span></div><div class="hls ps24" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:132.03mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps24" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:137.26mm;height:3.88mm;width:170.00mm;"><span class="hrt cs79">2026년 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;월 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;일</span></div><div class="hls ps24" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:142.13mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps24" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:147.18mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps38" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:152.41mm;height:3.88mm;width:170.00mm;"><span class="hrt cs79">&nbsp;신 청 자 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(서명)</span></div><div class="hls ps38" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:157.29mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps38" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:162.34mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps38" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:167.39mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps39" style="line-height:5.29mm;white-space:nowrap;left:0.00mm;top:172.62mm;height:5.29mm;width:170.00mm;"><span class="hrt cs82">대덕소프트웨어마이스터고등학교장 귀하&nbsp;</span></div><div class="hls ps39" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:179.33mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps39" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:183.18mm;height:3.88mm;width:170.00mm;"><span class="hrt cs84">󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏</span></div><div class="hls ps39" style="line-height:4.23mm;white-space:nowrap;left:0.00mm;top:188.23mm;height:4.23mm;width:170.00mm;"><span class="hrt cs85">【</span><span class="hrt cs86">서류제출】</span><span class="hrt cs72">본 서류는 서명 후 스캔 제출</span></div><div class="hls ps39" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:193.55mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps39" style="line-height:4.23mm;white-space:nowrap;left:0.00mm;top:198.32mm;height:4.23mm;width:170.00mm;"><span class="hrt cs85">【</span><span class="hrt cs86">첨부서류】</span></div><div class="hls ps93" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:203.82mm;height:3.53mm;width:170.00mm;"><span class="hrt cs72">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1. 이력서 1부(별도 양식 없음)</span></div><div class="hls ps93" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:210.17mm;height:3.53mm;width:170.00mm;"><span class="hrt cs72">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2. 멘토링 활동 계획서 1부[붙임4]</span></div><div class="hls ps93" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:216.52mm;height:3.53mm;width:170.00mm;"><span class="hrt cs72">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3. 재직증명서</span></div><div class="hls ps93" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:222.87mm;height:3.53mm;width:170.00mm;"><span class="hrt cs72">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;4. 개인정보 수집・이용・제공 동의서 1부[붙임5]</span></div><div class="hls ps93" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:229.22mm;height:3.53mm;width:170.00mm;"><span class="hrt cs72">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;5. 통장사본 스캔본(인터넷 뱅킹에서 통장사본 출력, 계좌 개설확인서 등)</span></div><div class="hls ps93" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:235.57mm;height:3.53mm;width:170.00mm;"><span class="hrt cs72">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;예) 농협의 경우 [증명서]-[통장사본출력])&nbsp;</span></div><div class="hls ps93" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:241.92mm;height:3.53mm;width:170.00mm;"><span class="hrt cs72">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;6. 성범죄 경력 조회 및 아동학대 관련 범죄전력조회 동의서 1부(스캔본)[붙임7]</span></div><div class="hls ps8" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:248.27mm;height:3.53mm;width:170.00mm;"><span class="hrt cs72">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;7. 거래처 등록을 위한 개인정보 수집・이용・제공 동의서 1부(스캔본)[붙임8]</span></div></div></div><div class="hpN" style="left:105mm;top:287mm;width:9.53mm;height:3.81mm;"><span class="hrt cs0">- 7 -</span></div></div></body></html>
